<?xml version="1.0"?>
<package format="2">
  <name>rebel_tutorials</name>
  <version>0.0.0</version>
  <description>The rebel_tutorials package</description>
  <maintainer email="taku8926@gmail.com">takuya-ki</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf</depend>
  <depend>moveit_core</depend>
  <depend>moveit_ros_planning_interface</depend>
</package>
